packages/wasm/ballerina-lang-go/parser/testdata/tokens/error/stacktrace-project/modules/stacktrace/stacktrace.token
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "getStackTrace" 13 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(error 5 0x00 ())
(: 1 0x00 ())
(ident, "StackFrame" 10 0x00 ())
([ 1 0x00 ())
(] 1 0x00 ())
({ 1 0x00 ())
(error 5 0x00 ())
(ident, "e" 1 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(( 1 0x00 ())
(string, ""error!"" 8 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "e" 1 0x00 ())
(. 1 0x00 ())
(ident, "stackTrace" 10 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
